Controllers return improvements
